  new meshing miniapp ref321.

New and updated examples and miniapps
-------------------------------------
- Added miniapps to demonstrate the H(div) and H(curl) NURBS elements.

- Added an MFEM example for the eikonal equation. This new solver is based on
  the proximal Galerkin method introduced by Keith and Surowiec.

- Added a command line option to all miniapps (`-p` or `--send-port`) for
  specifying the GLVis server socket port (19916 by default).

GPU computing
-------------
- Added support for GPU-accelerated batched linear algebra (using cuBLAS,
  hipBLAS, MAGMA, or native MFEM functionality) through the BatchedLinAlg class.

- A new GPU kernel dispatch mechanism was introduced. Users can instantiate
  specialized kernels for specific combinations of (for example) polynomial
  degree and number of quadrature points using
  `DiffusionIntegrator::AddSpecialization` and
  `MassIntegrator::AddSpecialization` (this functionality may be added to more
  integrators in the future).

- Calls to slower fallback kernels can be reported to `mfem::err` by setting
  the environment variable `MFEM_REPORT_KERNELS` to any value other than `NO`
  or by explicitly calling `KernelReporter::Enable`. Users can then add
  specializations for these kernels to achieve higher performance.

- Element assembly kernels have been added for low-order refined to
  high-order transfer operators. New kernels can be offloaded as device
  kernels. Example usage may be found in lor-transfer.cpp under miniapps/tools.

- Added support for GPU accelerated FindPointsGSLIB. Note that this will require
  the users to switch from gslib v1.0.7 to v1.0.9.

Miscellaneous
-------------
- Added support for SUNDIALS v7. See the section "API changes" for some small
  changes related to this new version.

- Refactored the `ARKStepSolver` class (ARKODE interface) to use
  `TimeDependentOperator::Mult` only when the associated ODE operator is